Fixed body y overflow from 100% + margin

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,10 +1,11 @@
 @import 'https://fonts.googleapis.com/css?family=Audiowide';
+
 a {
 	color: inherit;
 }
 body {
 	background-color: #9E9E9E;
-	margin: 0.25em;
+	margin: 0 0.5em;
 }
 body > header {
 	align-items: center;
